--- a/src/app/blockchain-evote/user/register/register.component.html
+++ b/src/app/blockchain-evote/user/register/register.component.html
@@ -23,30 +23,20 @@
 </div>
 <div class="card">
     <div class="flex flex-wrap card-container m-2" style="max-width: 100%">
-        <div class="flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 ml-2 border-round" style="min-width: 200px; min-height: 100px" *ngFor="let elec of election">
-            <p-card header="{{elec.elecName}}" [style]="{width: '360px'}" styleClass="p-card-shadow">
-                <ng-template pTemplate="header">
-                    <div class="flex justify-content-center">
-                        <img alt="Card" src="api/candidate/image/{{elec.elecImages}}" [style]="{width: '350px',height: '200px'}">
-                    </div>
-                </ng-template>
-                <p>
-                    {{elec.elecDetail}}
-                </p>
-                <div style="margin-top: 1rem">
-                    <b>
-                        <p>
-                            เริ่มต้น : {{elec.elecStartdate | formatDate}}
-                        </p>
-                        <p>
-                            สิ้นสุด : {{elec.elecEnddate | formatDate}}
-                        </p>
-                    </b>
-                </div>
-                <ng-template pTemplate="footer">
-                    <button pButton type="button" class="p-button buttonColor" label="ลงทะเบียน" [style]="{width: '100%'}" (click)="goToRegister(elec.elecId)"></button>
-                </ng-template>
-            </p-card>
+        <div class="flex align-items-center justify-content-start bg-blue-500 font-bold text-white m-2 ml-2 border-round" style="min-width: 200px; min-height: 100px" *ngFor="let elec of election">
+            <div class="flex align-items-center ">
+                <p-card header="{{elec.elecName}}" [style]="{width: '350px'}" styleClass="p-card-shadow">
+                    <ng-template pTemplate="header">
+                        <img alt="Card" src="api/candidate/image/{{elec.elecImages}}" style="width: 350px;height: 300px;">
+                    </ng-template>
+                    <p>{{elec.elecDetail}}</p>
+                    <p><b>เริ่มต้น : {{elec.elecStartdate | formatDate}}</b></p>
+                    <p><b>สิ้นสุด : {{elec.elecEnddate | formatDate}}</b></p>
+                    <ng-template pTemplate="footer">
+                        <button pButton type="button" class="p-button buttonColor" label="ลงทะเบียน" [style]="{width: '100%'}" (click)="goToRegister(elec.elecId)"></button>
+                    </ng-template>
+                </p-card>
+            </div>
         </div>
     </div>
 </div>
