--- a/src/app/blockchain-evote/user/voting-page/voting-page.component.html
+++ b/src/app/blockchain-evote/user/voting-page/voting-page.component.html
@@ -61,7 +61,7 @@
                                     <i class="pi pi-check-circle" style="font-size: 1rem;margin-right: 5px;"></i>
                                     <label for="Number" class="block text-xl"><b>เปิดให้ลงคะแนน : </b></label>
                                     <div class="flex align-items-center justify-content-start border-round mt-2 ml-2 " style="min-width: 20px; min-height: 75px ">
-                                        <p-inputSwitch [(ngModel)]="election.onVote"></p-inputSwitch>
+                                        <p-inputSwitch [(ngModel)]="election.elecOnVote" [disabled]="true"></p-inputSwitch>
                                     </div>
                                 </div>
                             </div>
